--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Section Accueil -->
     <section id="home" class="section home">
         <h1>Bienvenue sur mon site personnel</h1>
-        <p>Je suis SANGANG DCHYMKOU Ornella, développeur passionné à la recherche de nouvelles opportunités.</p>
+        <p>Je suis SANGANG DCHYMKOU Ornella, élève ingénieure à la recherche de nouvelles opportunités.</p>
     </section>
 
     <!-- Section À propos -->
@@ -67,13 +67,13 @@
                 <img src="images/udp.png" alt="Projet 1">
                 <h3>Transfert de trafic UDP</h3>
                 <p>Simulation d'un transfert de trafic UDP.</p>
-                <a href="https://github.com/ton-compte/projet1" target="_blank">Voir sur GitHub</a>
+                <a href="https://github.com/OrnellaDK/UDP" target="_blank">Voir sur GitHub</a>
             </div>
             <div class="project-item">
                 <img src="images/robot.jpg" alt="Projet 2">
-                <h3>Robot autonome pour la coupe de France</h3>
+                <h3>Projet thématique pour la coupe de France de Robotique</h3>
                 <p>Conception et réalisation d'un robot autonome.</p>
-                <a href="https://github.com/ton-compte/projet2" target="_blank">Voir sur GitHub</a>
+                <a href="https://github.com/OrnellaDK/robotique" target="_blank">Voir sur GitHub</a>
             </div>
         </div>
     </section>
@@ -94,6 +94,15 @@
             <button type="submit">Envoyer</button>
         </form>
     </section>
+
+     <!-- Lien vers LinkedIn -->
+     <div class="social-links">
+        <p>Retrouvez-moi sur LinkedIn pour plus d'informations :</p>
+        <a href="https://www.linkedin.com/in/ornella-sangang-dchymkou-3568ab28b?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BHnVisawIRqq5KlE1oVTD9w%3D%3D" target="_blank">
+            <img src="images/linkedin.jpg" alt="LinkedIn" style="width:30px;height:30px;margin-top:10px;">
+        </a>
+    </div>
+</section>
 
     <footer>
         <p>&copy; 2024 SANGANG DCHYMKOU Ornella - Tous droits réservés.</p>
