--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <!-- Lien vers LinkedIn -->
     <div class="social-links">
         <p>Retrouvez-moi sur LinkedIn pour plus d'informations :</p>
-        <a href="https://www.linkedin.com/in/ornella-sangang-dchymkou-3568ab28b?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BHnVisawIRqq5KlE1oVTD9w%3D%3D" target="_blank">
+        <a href="www.linkedin.com/in/ornella-sangang-dchymkou-3568ab28b" target="_blank">
             <img src="images/linkedin.jpg" alt="LinkedIn" style="width:30px;height:30px;margin-top:10px;">
         </a>
     </div>
