--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="projects-gallery">
             <div class="project-item">
                 <img src="images/udp.png" alt="Projet 1">
-                <h3>Transfert de trafic UDP</h3>
+                <h3>Transfert de trafic UDP en langage C</h3>
                 <p>Simulation d'un transfert de trafic UDP.</p>
                 <a href="https://github.com/OrnellaDK/UDP" target="_blank">Voir sur GitHub</a>
             </div>
