--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
             <li>HTML / CSS</li>
             <li>JavaScript</li>
             <li>React / Angular</li>
-            <li>Node.js / Express</li>
-            <li>SQL / NoSQL</li>
+            <li>Node.js </li>
+            <li>SQL </li>
             <li>Git / GitHub</li>
             <li>C / C++</li>
             <li>Java</li>
