--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
         <h2>À propos de moi</h2>
         <div class="about-content">
             <div class="about-text">
-                <p>Je suis élève ingénieure en télécommunications et réseaux, passionnée de sécurité des réseaux. Actuellement en formation pour une certification AWS et avec une expérience solide en networking, je cherche à contribuer à des projets novateurs.</p>
+                <p>Actuellement élève ingénieure en télécommunications et réseaux, je suis passionnée par la sécurité des réseaux et l’innovation technologique. Curieuse et engagée, je me forme activement à la certification AWS pour approfondir mes compétences en cloud computing et en architecture réseau.
+
+En parallèle, j’élargis mes compétences en développement de logiciels en me spécialisant dans Node.js et React. Je souhaite créer des applications web et mobiles robustes et intuitives, en alliant mes connaissances en networking à une maîtrise des technologies de développement modernes.
+
+Dynamique et déterminée, je suis prête à contribuer à des projets novateurs, collaborer avec des équipes motivées et relever de nouveaux défis dans le domaine de la technologie.</p>
             </div>
             <div class="about-photo">
                 <img src="images/profil.jpg" alt="Photo de Ornella">
