--- a/index.html
+++ b/index.html
@@ -82,6 +82,34 @@ Dynamique et déterminée, je suis prête à contribuer à des projets novateurs
         </div>
     </section>
 
+    <!-- Section Mini Projets -->
+<section id="mini-projects" class="section mini-projects">
+    <h2>Mini Projets</h2>
+    <div class="mini-projects-gallery">
+        <div class="mini-project-item">
+            <h3>Mini-Projet 1 : Calculatrice en JavaScript</h3>
+            <p>Une calculatrice simple pour renforcer mes bases en JavaScript.</p>
+            <a href="https://github.com/OrnellaDK/calculatrice-js" target="_blank">Voir sur GitHub</a>
+        </div>
+        <div class="mini-project-item">
+            <h3>Mini-Projet 2 : Todo List en React</h3>
+            <p>Une application de gestion de tâches pour explorer les bases de React.</p>
+            <a href="https://github.com/OrnellaDK/todo-list-react" target="_blank">Voir sur GitHub</a>
+        </div>
+        <div class="mini-project-item">
+            <h3>Mini-Projet 3 : Serveur Express</h3>
+            <p>Un serveur simple avec Express pour comprendre les bases de Node.js.</p>
+            <a href="https://github.com/OrnellaDK/serveur-express" target="_blank">Voir sur GitHub</a>
+        </div>
+        <div class="mini-project-item">
+            <h3>Mini-Projet 4 : Analyse et filtrage des numéros de téléphone dans un fichier</h3>
+            <p>Analyse et filtrage en langage Python.</p>
+            <a href="https://github.com/OrnellaDK/serveur-express" target="_blank">Voir sur GitHub</a>
+        </div>
+    </div>
+</section>
+
+
     <!-- Section Contact -->
     <section id="contact" class="section contact">
         <h2>Contactez-moi</h2>
