--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ Dynamique et déterminée, je suis prête à contribuer à des projets novateurs
         <div class="mini-project-item">
             <h3>Mini-Projet 1 : Calculatrice en JavaScript</h3>
             <p>Une calculatrice simple pour renforcer mes bases en JavaScript.</p>
-            <a href="https://ornelladk.github.io/calculatrice/" target="_blank">Voir sur GitHub</a>
+            <a href="https://ornelladk.github.io/calculatrice" target="_blank">Voir sur GitHub</a>
         </div>
         <div class="mini-project-item">
             <h3>Mini-Projet 2 : Todo List en React</h3>
