--- a/index.html
+++ b/index.html
@@ -92,17 +92,22 @@ Dynamique et déterminée, je suis prête à contribuer à des projets novateurs
             <a href="https://ornelladk.github.io/calculatrice" target="_blank">Voir sur GitHub</a>
         </div>
         <div class="mini-project-item">
-            <h3>Mini-Projet 2 : Todo List en React</h3>
+            <h3>Mini-Projet 2 : Transfert de trafic TCP</h3>
+            <p>Transfert de trafic TCP en java.</p>
+            <a href="https://github.com/OrnellaDK/todo-list-react" target="_blank">Voir sur GitHub</a>
+        </div>
+        <div class="mini-project-item">
+            <h3>Mini-Projet 3 : Todo List en React</h3>
             <p>Une application de gestion de tâches pour explorer les bases de React.</p>
             <a href="https://github.com/OrnellaDK/todo-list-react" target="_blank">Voir sur GitHub</a>
         </div>
         <div class="mini-project-item">
-            <h3>Mini-Projet 3 : Serveur Express</h3>
+            <h3>Mini-Projet 4 : Serveur Express</h3>
             <p>Un serveur simple avec Express pour comprendre les bases de Node.js.</p>
             <a href="https://github.com/OrnellaDK/serveur-express" target="_blank">Voir sur GitHub</a>
         </div>
         <div class="mini-project-item">
-            <h3>Mini-Projet 4 : Analyse et filtrage des numéros de téléphone dans un fichier</h3>
+            <h3>Mini-Projet 5 : Analyse et filtrage des numéros de téléphone dans un fichier</h3>
             <p>Analyse et filtrage en langage Python.</p>
             <a href="https://github.com/OrnellaDK/serveur-express" target="_blank">Voir sur GitHub</a>
         </div>
