--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ Dynamique et déterminée, je suis prête à contribuer à des projets novateurs
         </div>
         <div class="mini-project-item">
             <h3>Mini-Projet 2 : Transfert de trafic TCP</h3>
-            <p>Transfert de trafic TCP en java.</p>
+            <p>Transfert de trafic TCP en Java.</p>
             <a href="https://github.com/OrnellaDK/todo-list-react" target="_blank">Voir sur GitHub</a>
         </div>
         <div class="mini-project-item">
