--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ Dynamique et déterminée, je suis prête à contribuer à des projets novateurs
         <div class="mini-project-item">
             <h3>Mini-Projet 2 : Transfert de trafic TCP avec Multithreading</h3>
             <p>Transfert de trafic TCP en Java.</p>
-            <a href="https://github.com/OrnellaDK/todo-list-react" target="_blank">Voir sur GitHub</a>
+            <a href="https://github.com/OrnellaDK/TraficTCP" target="_blank">Voir sur GitHub</a>
         </div>
         <div class="mini-project-item">
             <h3>Mini-Projet 3 : Todo List en React</h3>
