--- a/index.html
+++ b/index.html
@@ -63,6 +63,22 @@ Dynamique et déterminée, je suis prête à contribuer à des projets novateurs
         </ul>
     </section>
 
+    <!-- Section Logiciels -->
+<section id="software" class="section software">
+    <h2>Logiciels</h2>
+    <ul class="software-list">
+        <li>Wireshark</li>
+        <li>MATLAB</li>
+        <li>Packet Tracer</li>
+        <li>Git</li>
+        <li>Docker</li>
+        <li>Visual Studio Code</li>
+        <li>JIRA</li>
+        <li>Eclipse</li>
+    </ul>
+</section>
+
+
     <!-- Section Projets -->
     <section id="projects" class="section projects">
         <h2>Mes Projets</h2>
