--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ Dynamique et déterminée, je suis prête à contribuer à des projets novateurs
 
     <!-- Section Mini Projets -->
 <section id="mini-projects" class="section mini-projects">
-    <h2>Mini Projets</h2>
+    <h2>Mini Projets (Personnels) </h2>
     <div class="mini-projects-gallery">
         <div class="mini-project-item">
             <h3>Mini-Projet 1 : Calculatrice en JavaScript</h3>
