--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@ Dynamique et déterminée, je suis prête à contribuer à des projets novateurs
             <li>Java</li>
             <li>Python</li>
             <li>Matlab</li>
+            <li>Bases de données SQL</li>
         </ul>
     </section>
 
@@ -75,6 +76,8 @@ Dynamique et déterminée, je suis prête à contribuer à des projets novateurs
         <li>Visual Studio Code</li>
         <li>JIRA</li>
         <li>Eclipse</li>
+        <li>SQL Server</li>
+        <li>Wampserver</li>
     </ul>
 </section>
 
