--- a/index.html
+++ b/index.html
@@ -106,9 +106,10 @@ Dynamique et déterminée, je suis prête à contribuer à des projets novateurs
     <h2>Mini Projets (Personnels) </h2>
     <div class="mini-projects-gallery">
         <div class="mini-project-item">
-            <h3>Mini-Projet 1 : Calculatrice en JavaScript</h3>
-            <p>Une calculatrice simple pour renforcer mes bases en JavaScript.</p>
-            <a href="https://ornelladk.github.io/calculatrice" target="_blank">Voir sur GitHub</a>
+            <h3>Mini-Projet 1 : Calculatrice et Devinette de nombre en JavaScrip</h3>
+            <p>Une calculatrice simple et un jeu de devinette de nombre pour renforcer mes bases en JavaScript.</p>
+            <!-- Lien vers la page de sélection -->
+            <a href="https://ornelladk.github.io/site/choix.html" target="_blank">Voir sur GitHub</a>
         </div>
         <div class="mini-project-item">
             <h3>Mini-Projet 2 : Transfert de trafic TCP avec Multithreading</h3>
