--- a/choix.html
+++ b/choix.html
@@ -16,8 +16,8 @@
     <section id="projects-choice">
         <div class="project-choice">
             <h2>Choisissez entre les projets :</h2>
-            <button onclick="window.location.href='https://github.com/OrnellaDK/calculatrice.html';">Calculatrice</button>
-            <button onclick="window.location.href='https://github.com/OrnellaDK/devinette.html';">Devinette de nombre</button>
+            <button onclick="window.location.href='https://github.com/OrnellaDK/calculatrice';">Calculatrice</button>
+            <button onclick="window.location.href='https://github.com/OrnellaDK/devinette';">Devinette de nombre</button>
         </div>
     </section>
 
