--- a/choix.html
+++ b/choix.html
@@ -16,7 +16,9 @@
     <section id="projects-choice">
         <div class="project-choice">
             <h2>Choisissez entre les projets :</h2>
+             <!-- Lien vers le répertoire GitHub de la calculatrice -->
             <button onclick="window.location.href='https://github.com/OrnellaDK/calculatrice';">Calculatrice</button>
+            <!-- Lien vers le répertoire GitHub de la devinette -->
             <button onclick="window.location.href='https://github.com/OrnellaDK/devinette';">Devinette de nombre</button>
         </div>
     </section>
