--- a/choix.html
+++ b/choix.html
@@ -17,9 +17,9 @@
         <div class="project-choice">
             <h2>Choisissez entre les projets :</h2>
              <!-- Lien vers le répertoire GitHub de la calculatrice -->
-            <button onclick="window.location.href='https://github.com/OrnellaDK/calculatrice/index.html';">Calculatrice</button>
+            <button onclick="window.location.href='https://ornelladk.github.io/calculatrice';">Calculatrice</button>
             <!-- Lien vers le répertoire GitHub de la devinette -->
-            <button onclick="window.location.href='https://github.com/OrnellaDK/devinette/devinette.html';">Devinette de nombre</button>
+            <button onclick="window.location.href='https://ornelladk.github.io/devinette';">Devinette de nombre</button>
         </div>
     </section>
 
