--- a/choix.html
+++ b/choix.html
@@ -17,7 +17,7 @@
         <div class="project-choice">
             <h2>Choisissez entre les projets :</h2>
              <!-- Lien vers le répertoire GitHub de la calculatrice -->
-            <button onclick="href='https://github.com/OrnellaDK/calculatrice/blob/main/index.html';">Calculatrice</button>
+            <button onclick="https://github.com/OrnellaDK/calculatrice/blob/main/index.html">Calculatrice</button>
             <!-- Lien vers le répertoire GitHub de la devinette -->
             <button onclick="window.location.href='https://ornelladk.github.io/devinette';">Devinette de nombre</button>
         </div>
