--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ Dynamique et déterminée, je suis prête à contribuer à des projets novateurs
             <p>Analyse et filtrage en langage Python.</p>
             <a href="https://github.com/OrnellaDK/analyse-numeros" target="_blank">Voir sur GitHub</a>
         </div>
-        <div class="mini-project-item">
+     <!--   <div class="mini-project-item">
             <h3>Mini-Projet 4 : Todo List en React</h3>
             <p>Une application de gestion de tâches pour explorer les bases de React.</p>
             <a href="https://github.com/OrnellaDK/todo-list-react" target="_blank">Voir sur GitHub</a>
@@ -130,7 +130,7 @@ Dynamique et déterminée, je suis prête à contribuer à des projets novateurs
             <h3>Mini-Projet 5 : Serveur Express</h3>
             <p>Un serveur simple avec Express pour comprendre les bases de Node.js.</p>
             <a href="https://github.com/OrnellaDK/serveur-express" target="_blank">Voir sur GitHub</a>
-        </div>
+        </div> -->
     </div>
 </section>
 
