--- a/index.html
+++ b/index.html
@@ -121,6 +121,11 @@ Dynamique et déterminée, je suis prête à contribuer à des projets novateurs
             <p>Analyse et filtrage en langage Python.</p>
             <a href="https://github.com/OrnellaDK/analyse-numeros" target="_blank">Voir sur GitHub</a>
         </div>
+        <div class="mini-project-item">
+            <h3>Mini-Projet 4 : Carnet de notes </h3>
+            <p>Entrées/Sortises, Interactivité, Gestion de liste en langage C </p>
+            <a href="https://github.com/OrnellaDK/carnetnotes" target="_blank">Voir sur GitHub</a>
+        </div> -->
      <!--   <div class="mini-project-item">
             <h3>Mini-Projet 4 : Todo List en React</h3>
             <p>Une application de gestion de tâches pour explorer les bases de React.</p>
