--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Section Accueil -->
     <section id="home" class="section home">
         <h1>Bienvenue sur mon site personnel</h1>
-        <p>Je suis SANGANG DCHYMKOU Ornella, élève ingénieure à la recherche de nouvelles opportunités.</p>
+        <p>Je suis SANGANG DCHYMKOU Ornella, étudiante en école d’ingénieur, curieuse de relever de nouveaux challenges.</p>
     </section>
 
     <!-- Section À propos -->
@@ -34,10 +34,7 @@
         <h2>À propos de moi</h2>
         <div class="about-content">
             <div class="about-text">
-                <p>Actuellement élève ingénieure en télécommunications et réseaux, je suis passionnée par la sécurité des réseaux et l’innovation technologique. Curieuse et engagée, je me forme activement à la certification AWS pour approfondir mes compétences en cloud computing et en architecture réseau.
-
-En parallèle, j’élargis mes compétences en développement de logiciels en me spécialisant dans Node.js et React. Je souhaite créer des applications web et mobiles robustes et intuitives, en alliant mes connaissances en networking à une maîtrise des technologies de développement modernes.
-
+                <p>Actuellement étudiante en 2ème année du cycle ingénieur en télécommunications et réseaux, je suis passionnée par la sécurité des réseaux et l’innovation technologique. 
 Dynamique et déterminée, je suis prête à contribuer à des projets novateurs, collaborer avec des équipes motivées et relever de nouveaux défis dans le domaine de la technologie.</p>
             </div>
             <div class="about-photo">
