--- a/index.html
+++ b/index.html
@@ -47,17 +47,10 @@ Dynamique et déterminée, je suis prête à contribuer à des projets novateurs
     <section id="skills" class="section skills">
         <h2>Mes Compétences</h2>
         <ul>
-            <li>HTML / CSS</li>
-            <li>JavaScript</li>
-            <li>React / Angular</li>
-            <li>Node.js </li>
-            <li>SQL </li>
-            <li>Git / GitHub</li>
-            <li>C / C++</li>
-            <li>Java</li>
-            <li>Python</li>
-            <li>Matlab</li>
-            <li>Bases de données SQL</li>
+            <li>Langages de programmation : HTML / CSS, JavaScript, SQL, Git / GitHub, C / C++, Java, Python, Matlab</li>
+            <li>Télécommunications : Antennes et propagation, Fibre optique, Liaisons satellitaires et faisceaux hertziens, Réseaux mobiles (2G/3G/4G/5G),Traitement du signal, Modulation/Démodulation, Technologies VoIP, Mesures RF, Câblage télécom, Équipements BTS/Node B/eNodeB</li>
+            <li>Administration Réseau : LDAP, DHCP/DNS/VPN/@IP, Switch/Routeur, VLAN/WAN, TCP/IP & WIFI, Protocoles OSPF/BGP/RIP</li>
+            <li>Sécurité des réseaux et sytèmes : Firewall / Proxy / IPS, Antivirus / IDS , RADIUS / SSH, Snort, OpenVPN </li>
         </ul>
     </section>
 
@@ -94,6 +87,12 @@ Dynamique et déterminée, je suis prête à contribuer à des projets novateurs
                 <h3>Projet thématique pour la coupe de France de Robotique</h3>
                 <p>Conception et réalisation d'un robot autonome.</p>
                 <a href="https://github.com/OrnellaDK/robotique" target="_blank">Voir sur GitHub</a>
+            </div>
+            <div class="project-item">
+                <img src="images/admin.jpg" alt="Projet 2">
+                <h3>Administration système & réseau sous Linux</h3>
+                <p>Mise en place d’un environnement réseau sous Linux incluant la gestion des utilisateurs, la configuration d’un serveur DNS et d’un annuaire LDAP, ainsi que l’administration à distance via SSH.</p>
+                <a href="https://github.com/OrnellaDK/administration" target="_blank">Voir sur GitHub</a>
             </div>
         </div>
     </section>
