--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
         <h2>À propos de moi</h2>
         <div class="about-content">
             <div class="about-text">
-                <p>Actuellement étudiante en 2ème année du cycle ingénieur en télécommunications et réseaux, je suis passionnée par la sécurité des réseaux et l’innovation technologique. 
-Dynamique et déterminée, je suis prête à contribuer à des projets novateurs, collaborer avec des équipes motivées et relever de nouveaux défis dans le domaine de la technologie.</p>
+                <p>Actuellement étudiante en deuxième année du cycle ingénieur en télécommunications et réseaux, je nourris une passion particulière pour l'administration et la sécurité des réseaux ainsi que pour l'innovation technologique.
+Je suis engagée dans un parcours de formation continue, avec une attention particulière aux certifications professionnelles telles que Cisco, AWS et TryHackMe, afin de renforcer mes compétences techniques et de me préparer aux défis du secteur.
+Dynamique, curieuse et résolument tournée vers l’avenir, je suis motivée par l'idée de contribuer à des projets innovants, de collaborer au sein d'équipes passionnées et de relever des défis techniques stimulants dans le domaine des technologies.</p>
             </div>
             <div class="about-photo">
                 <img src="images/profil.jpg" alt="Photo de Ornella">
