--- a/index.html
+++ b/index.html
@@ -48,6 +48,19 @@ Dynamique, curieuse et résolument tournée vers l’avenir, je suis motivée pa
     <section id="skills" class="section skills">
         <h2>Mes Compétences</h2>
         <ul>
+                <div class="project-item">
+                <h3>Langages de programmation</h3>
+                <p><li>HTML / CSS</li>
+                    <li>JavaScript</li>
+                    <li>SQL</li>
+                    <li>Git / GitHub</li>
+                    <li>C / C++</li>
+                    <li>Java</li>
+                    <li>Python</li>
+                    <li>Matlab</li>
+                </p>
+               
+            </div>
             <li>Langages de programmation : HTML / CSS, JavaScript, SQL, Git / GitHub, C / C++, Java, Python, Matlab</li>
             <li>Télécommunications : Antennes et propagation, Fibre optique, Liaisons satellitaires et faisceaux hertziens, Réseaux mobiles (2G/3G/4G/5G),Traitement du signal, Modulation/Démodulation, Technologies VoIP, Mesures RF, Câblage télécom, Équipements BTS/Node B/eNodeB</li>
             <li>Administration Réseau : LDAP, DHCP/DNS/VPN/@IP, Switch/Routeur, VLAN/WAN, TCP/IP & WIFI, Protocoles OSPF/BGP/RIP</li>
