--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ Dynamique, curieuse et résolument tournée vers l’avenir, je suis motivée pa
     <section id="skills" class="section skills">
         <h2>Mes Compétences</h2>
         <ul>
-                <div class="project-item">
+            <div class="project-item">
                 <h3>Langages de programmation</h3>
                 <p><li>HTML / CSS</li>
                     <li>JavaScript</li>
@@ -58,13 +58,38 @@ Dynamique, curieuse et résolument tournée vers l’avenir, je suis motivée pa
                     <li>Java</li>
                     <li>Python</li>
                     <li>Matlab</li>
-                </p>
-               
+                </p> 
             </div>
-            <li>Langages de programmation : HTML / CSS, JavaScript, SQL, Git / GitHub, C / C++, Java, Python, Matlab</li>
-            <li>Télécommunications : Antennes et propagation, Fibre optique, Liaisons satellitaires et faisceaux hertziens, Réseaux mobiles (2G/3G/4G/5G),Traitement du signal, Modulation/Démodulation, Technologies VoIP, Mesures RF, Câblage télécom, Équipements BTS/Node B/eNodeB</li>
-            <li>Administration Réseau : LDAP, DHCP/DNS/VPN/@IP, Switch/Routeur, VLAN/WAN, TCP/IP & WIFI, Protocoles OSPF/BGP/RIP</li>
-            <li>Sécurité des réseaux et sytèmes : Firewall / Proxy / IPS, Antivirus / IDS , RADIUS / SSH, Snort, OpenVPN </li>
+            <div class="project-item">
+                <h3>Télécommunications</h3>
+                <p><li>Antennes et propagation</li>
+                    <li>Fibre optique</li>
+                    <li>Liaisons satellitaires et faisceaux hertziens</li>
+                    <li>Réseaux mobiles (2G/3G/4G/5G)</li>
+                    <li>Traitement du signal</li>
+                    <li>Modulation/Démodulation</li>
+                    <li>Technologies VoIP</li>
+                    <li>Mesures RF</li>
+                    <li>Câblage télécom</li>
+                </p> 
+            </div>
+            <div class="project-item">
+                <h3>Administration Réseau</h3>
+                <p><li>LDAP</li>
+                    <li>DHCP/DNS/VPN/@IP</li>
+                    <li>Switch/Routeur</li>
+                    <li>VLAN/WAN</li>
+                    <li>TCP/IP & WIFI</li>
+                    <li>JProtocoles OSPF/BGP/RIP</li>
+                </p> 
+            </div>
+            <div class="project-item">
+                <h3>Sécurité des réseaux et sytèmes</h3>
+                <p><li>Firewall / Proxy / IPS</li>
+                    <li>RADIUS / SSH</li>
+                    <li>Snort</li>
+                    <li>OpenVPN</li>
+                </p>
         </ul>
     </section>
 
