--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ Dynamique, curieuse et résolument tournée vers l’avenir, je suis motivée pa
                     <li>Réseaux mobiles (2G/3G/4G/5G)</li>
                     <li>Traitement du signal</li>
                     <li>Modulation/Démodulation</li>
-                    <li>Technologies VoIP</li>
+                    <li>Technologies VoIP, ToIP</li>
                     <li>Mesures RF</li>
                     <li>Câblage télécom</li>
                 </p> 
@@ -80,7 +80,7 @@ Dynamique, curieuse et résolument tournée vers l’avenir, je suis motivée pa
                     <li>Switch/Routeur</li>
                     <li>VLAN/WAN</li>
                     <li>TCP/IP & WIFI</li>
-                    <li>JProtocoles OSPF/BGP/RIP</li>
+                    <li>Protocoles OSPF/BGP/RIP</li>
                 </p> 
             </div>
             <div class="project-item">
