--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ Dynamique, curieuse et résolument tournée vers l’avenir, je suis motivée pa
     </section>
 
     <!-- Section Compétences -->
-    <section id="skills" class="section skills">
+    <section id="skill" class="section skills">
         <h2>Mes Compétences</h2>
         <ul>
             <div class="project-item">
