--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
         <h2>À propos de moi</h2>
         <div class="about-content">
             <div class="about-text">
-                <p>Actuellement étudiante en deuxième année du cycle ingénieur en télécommunications et réseaux, je nourris une passion particulière pour l'administration et la sécurité des réseaux ainsi que pour l'innovation technologique.
-Je suis engagée dans un parcours de formation continue, avec une attention particulière aux certifications professionnelles telles que Cisco, AWS et TryHackMe, afin de renforcer mes compétences techniques et de me préparer aux défis du secteur.
-Dynamique, curieuse et résolument tournée vers l’avenir, je suis motivée par l'idée de contribuer à des projets innovants, de collaborer au sein d'équipes passionnées et de relever des défis techniques stimulants dans le domaine des technologies.</p>
+                <p>Actuellement étudiante en deuxième année du cycle ingénieur en télécommunications et réseaux, je suis passionnée par les domaines de l'administration, de la sécurité des réseaux et du cloud computing. Mon parcours académique me permet d'acquérir de bonnes compétences en gestion des infrastructures réseaux, en cybersécurité, et en technologies de cloud, avec une forte orientation vers l'innovation technologique.
+
+Engagée dans une démarche de formation continue, je mets un point d'honneur à compléter ma formation avec des certifications professionnelles reconnues, telles que Cisco, AWS et TryHackMe, afin de renforcer mes compétences techniques et d'anticiper les évolutions du secteur. Cette approche proactive me permet de me préparer aux défis techniques tout en restant à la pointe des dernières innovations.
+
+Dynamique, curieuse et résolument tournée vers l'avenir, je suis motivée par l'opportunité de contribuer à des projets technologiques ambitieux et de travailler au sein d'équipes passionnées. Mon objectif est de relever des défis stimulants dans un environnement technologique en constante évolution, en apportant des solutions innovantes et efficaces.</p>
             </div>
             <div class="about-photo">
                 <img src="images/profil.jpg" alt="Photo de Ornella">
