--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@ Dynamique, curieuse et résolument tournée vers l'avenir, je suis motivée par 
         <li>Eclipse</li>
         <li>SQL Server</li>
         <li>Wampserver</li>
+        <li>VirtualBox / VMWare</li>
     </ul>
 </section>
 
