--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Engagée dans une démarche de formation continue, je mets un point d'honneur à
 Dynamique, curieuse et résolument tournée vers l'avenir, je suis motivée par l'opportunité de contribuer à des projets technologiques ambitieux et de travailler au sein d'équipes passionnées. Mon objectif est de relever des défis stimulants dans un environnement technologique en constante évolution, en apportant des solutions innovantes et efficaces.</p>
             </div>
             <div class="about-photo">
-                <img src="images/profil.jpg" alt="Photo de Ornella">
+                <img src="images/photo.jpg" alt="Photo de Ornella">
             </div>
         </div>
     </section>
