--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h2>À propos de moi</h2>
         <div class="about-content">
             <div class="about-text">
-                <p>Actuellement étudiante en deuxième année du cycle ingénieur en télécommunications et réseaux, je suis passionnée par les domaines de l'administration, de la sécurité des réseaux et du cloud computing. Mon parcours académique me permet d'acquérir de bonnes compétences en gestion des infrastructures réseaux, en cybersécurité, et en technologies de cloud, avec une forte orientation vers l'innovation technologique.
+                <p>Actuellement étudiante en deuxième année du cycle ingénieur en télécommunications et réseaux, je suis passionnée par les domaines de l'administration, de la sécurité des réseaux, du marchine learning et du cloud computing. Mon parcours académique me permet d'acquérir de bonnes compétences en gestion des infrastructures réseaux, en cybersécurité, et en technologies de cloud, avec une forte orientation vers l'innovation technologique.
 
 Engagée dans une démarche de formation continue, je mets un point d'honneur à compléter ma formation avec des certifications professionnelles reconnues, telles que Cisco, AWS et TryHackMe, afin de renforcer mes compétences techniques et d'anticiper les évolutions du secteur. Cette approche proactive me permet de me préparer aux défis techniques tout en restant à la pointe des dernières innovations.
 
